@@ -3,7 +3,7 @@ package org.dcsa.conformance.core.check;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.function.Consumer;
 import java.util.function.Function;
@@ -31,23 +31,32 @@ public abstract class ConformanceCheck {
   }
 
   private synchronized List<ConformanceCheck> getSubChecks() {
-    if (subChecks == null) {
-      subChecks = createSubChecks().collect(Collectors.toList());
+    try {
+      if (subChecks == null) {
+        subChecks = createSubChecks().collect(Collectors.toList());
+      }
+      return subChecks.stream()
+          .filter(Objects::nonNull)
+          .filter(ConformanceCheck::isApplicable)
+          .toList();
+    } catch (Exception e) {
+      results.add(ConformanceResult.withErrors(Set.of("ConformanceCheck.getSubChecks() execution failed, see log file for details: %s".formatted(e))));
+      return List.of();
     }
-    return subChecks.stream()
-        .filter(Objects::nonNull)
-        .filter(ConformanceCheck::isApplicable)
-        .toList();
   }
 
   public final void check(Function<UUID, ConformanceExchange> getExchangeByUuid) {
-    List<ConformanceCheck> conformanceChecks = getSubChecks();
-    if (conformanceChecks.isEmpty()) {
-      this.doCheck(getExchangeByUuid);
-    } else {
-      conformanceChecks.forEach(subCheck -> subCheck.check(getExchangeByUuid));
-      if (conformanceChecks.stream().noneMatch(ConformanceCheck::isApplicable))
-        this.setApplicable(false);
+    try {
+      List<ConformanceCheck> conformanceChecks = getSubChecks();
+      if (conformanceChecks.isEmpty()) {
+        this.doCheck(getExchangeByUuid);
+      } else {
+        conformanceChecks.forEach(subCheck -> subCheck.check(getExchangeByUuid));
+        if (conformanceChecks.stream().noneMatch(ConformanceCheck::isApplicable))
+          this.setApplicable(false);
+      }
+    } catch (Exception e) {
+      results.add(ConformanceResult.withErrors(Set.of("ConformanceCheck.check() execution failed, see log file for details: %s".formatted(e))));
     }
   }
 
